Fixing card demo image invisible on transition

--- a/example/src/Screens/Cards/index.css
+++ b/example/src/Screens/Cards/index.css
@@ -19,11 +19,11 @@
   }
   .card-bg {
     height: 100%;
-    position: absolute;
     border-radius: 15px;
     background-color: white;
     z-index: 0;
-    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
+      0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
   }
   .card-list {
     list-style: none;
@@ -60,7 +60,7 @@
     z-index: 1;
   }
   &.suspense .card-list {
-    animation: cards-fade-in .5s ease forwards;
+    animation: cards-fade-in 0.5s ease forwards;
   }
 }
 @keyframes cards-fade-in {
